--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,9 +88,9 @@ services:
     image: govuk/search-api:${RUMMAGER_COMMITISH:-deployed-to-production}
     build: apps/rummager
     depends_on:
-      - redis
       - elasticsearch6
       - publishing-api
+      - redis
       - rummager-worker
       - rummager-listener-publishing-queue
       - rummager-listener-insert-data
@@ -99,7 +99,7 @@ services:
     environment:
       << : *govuk-app
       GOVUK_APP_NAME: rummager
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: rummager
       VIRTUAL_HOST: rummager.dev.gov.uk
     links:
@@ -115,14 +115,14 @@ services:
     depends_on:
       - elasticsearch6
       - rabbitmq
+      - redis
       - publishing-api
       - diet-error-handler
-      - redis
     command: foreman run worker
     environment:
       << : *govuk-app
       GOVUK_APP_NAME: rummager-worker
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: rummager-worker
     links:
       - nginx-proxy:publishing-api.dev.gov.uk
@@ -139,7 +139,7 @@ services:
     environment:
       << : *govuk-app
       GOVUK_APP_NAME: rummager-listener-publishing-queue
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: rummager-listener-publishing-queue
     ports: []
 
@@ -153,7 +153,7 @@ services:
     environment:
       << : *govuk-app
       GOVUK_APP_NAME: rummager-listener-insert-data
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: rummager-listener-insert-data
     ports: []
 
@@ -167,7 +167,7 @@ services:
     environment:
       << : *govuk-app
       GOVUK_APP_NAME: rummager-listener-bulk-insert-data
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: rummager-listener-bulk-insert-data
     ports: []
 
@@ -314,7 +314,7 @@ services:
       << : *govuk-app
       DATABASE_URL: postgresql://postgres:postgres@postgres/publishing-api
       MEMCACHE_SERVERS: memcached
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: publishing-api
       VIRTUAL_HOST: publishing-api.dev.gov.uk
     links:
@@ -339,7 +339,7 @@ services:
     environment:
       << : *govuk-app
       DATABASE_URL: postgresql://postgres:postgres@postgres/publishing-api
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       MEMCACHE_SERVERS: memcached
       SENTRY_CURRENT_ENV: publishing-api-worker
     healthcheck:
@@ -356,14 +356,14 @@ services:
       context: apps/specialist-publisher
     depends_on:
       - mongo
-      - redis
       - publishing-api
+      - redis
       - asset-manager
       - diet-error-handler
     environment:
       << : *govuk-app
       MONGO_WRITE_CONCERN: 1
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: specialist-publisher
       VIRTUAL_HOST: specialist-publisher.dev.gov.uk
     healthcheck:
@@ -383,8 +383,8 @@ services:
       context: apps/travel-advice-publisher
     depends_on:
       - mongo
-      - redis
       - publishing-api
+      - redis
       - asset-manager
       - static
       - rummager
@@ -393,7 +393,7 @@ services:
     environment:
       << : *govuk-app
       SENTRY_CURRENT_ENV: travel-advice-publisher
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       VIRTUAL_HOST: travel-advice-publisher.dev.gov.uk
     healthcheck:
       << : *default-healthcheck
@@ -419,7 +419,7 @@ services:
       disable: true
     environment:
       << : *govuk-app
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: travel-advice-publisher-worker
     ports: []
 
@@ -436,7 +436,7 @@ services:
       - diet-error-handler
     environment:
       << : *govuk-app
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: collections-publisher
       VIRTUAL_HOST: collections-publisher.dev.gov.uk
     healthcheck:
@@ -455,11 +455,11 @@ services:
     command: foreman run worker
     depends_on:
       - publishing-api
-      - diet-error-handler
       - redis
+      - diet-error-handler
     environment:
       << : *govuk-app
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: collections-publisher-worker
     healthcheck:
       disable: true
@@ -582,7 +582,7 @@ services:
       << : *govuk-app
       DISABLE_SECURE_COOKIES: "true"
       DISABLE_EMAIL: "true"
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: publisher
       VIRTUAL_HOST: publisher.dev.gov.uk
       GOVUK_CONTENT_SCHEMAS_PATH: /govuk-content-schemas/
@@ -608,7 +608,7 @@ services:
       - diet-error-handler
     environment:
       << : *govuk-app
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: publisher-worker
     healthcheck:
       disable: true
@@ -766,7 +766,7 @@ services:
       MEMCACHE_SERVERS: memcached
       SENTRY_CURRENT_ENV: whitehall-admin
       LOG_PATH: log/admin.log
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
     healthcheck:
       << : *default-healthcheck
     links:
@@ -791,7 +791,7 @@ services:
       VIRTUAL_HOST: whitehall-frontend.dev.gov.uk
       SENTRY_CURRENT_ENV: whitehall-frontend
       LOG_PATH: log/frontend.log
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
 
   draft-whitehall-frontend:
     << : *whitehall
@@ -802,7 +802,7 @@ services:
       VIRTUAL_HOST: draft-whitehall-frontend.dev.gov.uk
       SENTRY_CURRENT_ENV: draft-whitehall-frontend
       LOG_PATH: log/draft-frontend.log
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
 
   whitehall-worker:
     << : *whitehall
@@ -812,7 +812,7 @@ services:
       - redis
     environment:
       << : *govuk-app
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: whitehall-worker
     healthcheck:
       disable: true
@@ -833,7 +833,7 @@ services:
     environment:
       << : *govuk-app
       DATABASE_URL: postgresql://postgres:postgres@postgres/content-tagger
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: content-tagger
       VIRTUAL_HOST: content-tagger.dev.gov.uk
     healthcheck:
@@ -856,7 +856,7 @@ services:
     environment:
       << : *govuk-app
       DATABASE_URL: postgresql://postgres:postgres@postgres/content-tagger
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: content-tagger-worker
     healthcheck:
       disable: true
@@ -876,7 +876,7 @@ services:
       << : *govuk-app
       ASSET_MANAGER_CLAMSCAN_PATH: /bin/true
       REDIS_HOST: redis
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: asset-manager
       VIRTUAL_HOST: asset-manager.dev.gov.uk
       FAKE_S3_HOST: http://127.0.0.1
@@ -900,7 +900,7 @@ services:
       << : *govuk-app
       ASSET_MANAGER_CLAMSCAN_PATH: /bin/true
       REDIS_HOST: redis
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: asset-manager-worker
       FAKE_S3_HOST: http://127.0.0.1
       ALLOW_FAKE_S3_IN_PRODUCTION_FOR_PUBLISHING_E2E_TESTS: "true"
@@ -923,7 +923,7 @@ services:
       DATABASE_URL: postgresql://postgres:postgres@postgres/email-alert-api
       EMAIL_ALERT_AUTH_TOKEN: 9d3e07ca727cd08cc503191f233919877160bfc57eaaa33541761c2d1ffd951ae205263be5832f26ba2670b142d7c593ec0f6bdd11a84cf325a32dbdd889ff44
       REDIS_HOST: redis
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: email-alert-api
       VIRTUAL_HOST: email-alert-api.dev.gov.uk
     healthcheck:
@@ -944,7 +944,7 @@ services:
       DATABASE_URL: postgresql://postgres:postgres@postgres/email-alert-api
       EMAIL_ALERT_AUTH_TOKEN: 9d3e07ca727cd08cc503191f233919877160bfc57eaaa33541761c2d1ffd951ae205263be5832f26ba2670b142d7c593ec0f6bdd11a84cf325a32dbdd889ff44
       REDIS_HOST: redis
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: email-alert-api-worker
     healthcheck:
       disable: true
@@ -959,7 +959,7 @@ services:
     environment:
       << : *govuk-app
       ASSET_HOST: static.dev.gov.uk
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: static
       VIRTUAL_HOST: static.dev.gov.uk
     links:
@@ -976,7 +976,7 @@ services:
       ASSET_HOST: draft-static.dev.gov.uk
       GOVUK_APP_NAME: draft-static
       PORT: 3113
-      REDIS_URL: redis://redis/1
+      REDIS_URL: redis://redis
       SENTRY_CURRENT_ENV: draft-static
       VIRTUAL_HOST: draft-static.dev.gov.uk
     ports:
